--- a/JUMA.HTML
+++ b/JUMA.HTML
@@ -8,7 +8,7 @@
 <body>
   <div class="part1">
 <img id="myImage" src="/media/dedan/5EF09D66F09D4565/mirror_image/1503903552034.jpg"height="300px" width="300px">
-<h1 id="heading"> My heading1</h1>
+<h1 id="heading" style="color:red;"> My heading1</h1>
 <p>This is a paragraph describing myImage</p>
 <button id="name" onclick='myFunction()'>
 Click Name!</button>
@@ -29,8 +29,9 @@ Click Name!</button>
 </div>
 
 <div class='part3'>
-<h2>My second heading</h2>
+<h2 id="h2" style="color:red;">My second heading</h2>
 <p> This is my full name and this is my story</p>
 </div>
+
 </body>
 </html>
